Error Mitigation/MagiCoder/Data/javax_xml_bind_util/javax_xml_bind_utilOutputResult.txt
Sample: JAXBResult_2
----------------------------------------------------------------
output:
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:1: error: package javax.xml.bind does not exist
import javax.xml.bind.JAXBContext;
                     ^
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:2: error: package javax.xml.bind does not exist
import javax.xml.bind.JAXBException;
                     ^
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:3: error: package javax.xml.bind does not exist
import javax.xml.bind.Unmarshaller;
                     ^
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:4: error: package javax.xml.bind.util does not exist
import javax.xml.bind.util.JAXBResult;
                          ^
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:11: error: cannot find symbol
            JAXBContext jc = JAXBContext.newInstance(MyObject.class);
            ^
  symbol:   class JAXBContext
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:11: error: cannot find symbol
            JAXBContext jc = JAXBContext.newInstance(MyObject.class);
                                                     ^
  symbol:   class MyObject
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:11: error: cannot find symbol
            JAXBContext jc = JAXBContext.newInstance(MyObject.class);
                             ^
  symbol:   variable JAXBContext
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:14: error: cannot find symbol
            Unmarshaller unmarshaller = jc.createUnmarshaller();
            ^
  symbol:   class Unmarshaller
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:17: error: cannot find symbol
            JAXBResult jaxbResult = new JAXBResult(unmarshaller);
            ^
  symbol:   class JAXBResult
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:17: error: cannot find symbol
            JAXBResult jaxbResult = new JAXBResult(unmarshaller);
                                        ^
  symbol:   class JAXBResult
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:26: error: cannot find symbol
            MyObject myObject = (MyObject) jaxbResult.getResult();
            ^
  symbol:   class MyObject
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:26: error: cannot find symbol
            MyObject myObject = (MyObject) jaxbResult.getResult();
                                 ^
  symbol:   class MyObject
  location: class JAXBResult_2
./Data/javax_xml_bind_util/javaFiles/JAXBResult_2.java:30: error: cannot find symbol
        } catch (JAXBException e) {
                 ^
  symbol:   class JAXBException
  location: class JAXBResult_2
13 errors


================================================================

